L12-solid: Complete ATM implementation with tests and refactoring